--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "test": "grunt"
   },
-  "main": "build/SPE.min.js",
+  "main": "src/SPE.js",
   "directories": {
     "doc": "docs",
     "example": "examples"
